// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`team snippets should render SnippetList as admin with no snippets 1`] = `
<div
  className="snippet-list"
>
  <div
    className="team-container__message"
  >
    <span>
      This team doesn't have any snippets.
      <br />
      Create the first one!
    </span>
  </div>
</div>
`;

exports[`team snippets should render SnippetList as admin with snippets 1`] = `
<div
  className="snippet-list"
>
  <Connect(SnippetItem)
    id="id1"
    key="id1"
    shortcut=".snipOne"
    team="team"
    text="<div>SnipOne text.</div>"
  />
  <Connect(SnippetItem)
    id="id2"
    key="id2"
    shortcut=".snipTwo"
    team="team"
    text="<div>SnipTwo text.</div>"
  />
</div>
`;

exports[`team snippets should render SnippetList as non-admin with no snippets 1`] = `
<div
  className="snippet-list"
>
  <div
    className="team-container__message"
  >
    <span>
      This team doesn't have any snippets.
      <br />
      Please work with your team admin to create some!
    </span>
  </div>
</div>
`;

exports[`team snippets should render SnippetList as non-admin with snippets 1`] = `
<div
  className="snippet-list"
>
  <Connect(SnippetItem)
    id="id1"
    key="id1"
    shortcut=".snipOne"
    team="team"
    text="<div>SnipOne text.</div>"
  />
  <Connect(SnippetItem)
    id="id2"
    key="id2"
    shortcut=".snipTwo"
    team="team"
    text="<div>SnipTwo text.</div>"
  />
</div>
`;

exports[`user snippets should render SnippetList with no snippets 1`] = `
<div
  className="snippet-list"
>
  <div
    className="list-item__message"
  >
    You don't have any snippets. Add some!
  </div>
</div>
`;

exports[`user snippets should render SnippetList with snippets 1`] = `
<div
  className="snippet-list"
>
  <Connect(SnippetItem)
    id="id1"
    isUser={true}
    key="id1"
    shortcut=".snipOne"
    text="<div>SnipOne text.</div>"
  />
  <Connect(SnippetItem)
    id="id2"
    isUser={true}
    key="id2"
    shortcut=".snipTwo"
    text="<div>SnipTwo text.</div>"
  />
</div>
`;
